--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Task Manager App</string>
+    <string name="task_update">All tasks completed</string>
+    <string name="appreciation">Nice work!</string>
 </resources>
